# team_mcp

./: .gitignore  MANIFEST.in  README.md  design.md  pyproject.toml
src/team_mcp/: __init__.py  config.py  git.py  output.py  server.py  state.py  types.py
src/team_mcp/agents/: __init__.py  loader.py
src/team_mcp/defaults/: config.yaml
src/team_mcp/defaults/agents/architect/: prompt.md
src/team_mcp/defaults/agents/ba/: prompt.md
src/team_mcp/defaults/agents/coder/: prompt.md
src/team_mcp/defaults/agents/qa/: prompt.md
src/team_mcp/defaults/agents/reviewer/: prompt.md
